putlocker link added

--- a/css/styles.css
+++ b/css/styles.css
@@ -44,3 +44,7 @@ body{
 	background-color: #FEF1E1;
 	background-image: url('http://wallpapercave.com/wp/75KenAW.jpg');
 }
+
+.link{
+	margin-top: 10px;
+}
